<resources>
    <string name="app_name">JavIt</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_new_user_name">Student Name</string>
    <string name="hint_new_email">Email</string>
    <string name="hint_new_password">Password</string>
    <string name="hint_new_confirm_password">Confirm Password</string>
    <string name="hint_new_department">Department</string>
    <string name="hint_new_phone_number">Phone Number</string>
    <string name="hint_user_name">Student Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="button_sign_up">Register</string>
    <string name="button_sign_in">Login</string>
    <string name="text_forgot_password">Forgot Password</string>
    <string name="text_new_account">Create New Account</string>
    <string name="text_login_instead">Login Instead</string>
    <string name="text_enter_email_for_password_reset">Enter your registered email to reset password</string>
    <string name="title_activity_landing">Landing</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_overview">Overview</string>
    <string name="menu_tutorials">Tutorials</string>
    <string name="menu_snippets">Snippets</string>
    <string name="menu_quiz">Quiz</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>

    <string name="menu_utilities">Utilities</string>

    <string name="advice_snip">Before you look, Try Guess the Output</string>
    <string name="pointer_snip">Below is a Code Snippet to Illustrate</string>

    <string name="btn_start_quiz">Take Quiz</string>

    <string name="txt_done_score">Score : 0</string>
    <string name="txt_passed_question">Passed : 0/30</string>
    <string name="btn_retake_quiz">TRY AGAIN</string>

    <string name="txt_score">Score</string>



</resources>