<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_primary"
    tools:context=".landing.fragments.QuizDone">

    <RelativeLayout
        android:layout_centerInParent="true"
        android:layout_margin="30dp"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/btnGroup"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_total_score"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:text="@string/txt_done_score"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_passed_question"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:id="@+id/txt_total_question_done"/>

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:id="@+id/pb_done"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/btn_try_again"
                android:layout_margin="8dp"
                android:text="@string/btn_retake_quiz"
                android:background="@color/crimson"
                android:textColor="@color/white"
                android:textStyle="bold"/>

        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>